tests/eval/exp/bad/substr_err1.scilla
let str = "hello" in
let a = Uint32 0 in
let b = Uint32 6 in
builtin substr str a b
